--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-srcs",
-  "version": "19.1.0-next.0",
+  "version": "19.0.5",
   "private": true,
   "description": "Angular - a web framework for modern web apps",
   "homepage": "https://github.com/angular/angular",
@@ -48,17 +48,17 @@
   },
   "// 1": "dependencies are used locally and by bazel",
   "dependencies": {
-    "@angular-devkit/build-angular": "19.0.0-rc.1",
-    "@angular-devkit/core": "19.0.0-rc.1",
-    "@angular-devkit/schematics": "19.0.0-rc.1",
-    "@angular/build": "19.0.0-rc.1",
-    "@angular/cdk": "19.0.0-rc.2",
-    "@angular/cli": "19.0.0-rc.1",
-    "@angular/material": "19.0.0-rc.2",
-    "@angular/ssr": "19.0.0-rc.1",
-    "@babel/cli": "7.25.9",
+    "@angular-devkit/build-angular": "19.1.0-next.0",
+    "@angular-devkit/core": "19.1.0-next.0",
+    "@angular-devkit/schematics": "19.1.0-next.0",
+    "@angular/build": "19.1.0-next.0",
+    "@angular/cdk": "19.1.0-next.0",
+    "@angular/cli": "19.1.0-next.0",
+    "@angular/material": "19.1.0-next.0",
+    "@angular/ssr": "19.1.0-next.0",
+    "@babel/cli": "7.26.4",
     "@babel/core": "7.26.0",
-    "@babel/generator": "7.26.2",
+    "@babel/generator": "7.26.3",
     "@bazel/concatjs": "5.8.1",
     "@bazel/esbuild": "5.8.1",
     "@bazel/jasmine": "5.8.1",
@@ -72,15 +72,15 @@
     "@rollup/plugin-babel": "^6.0.0",
     "@rollup/plugin-commonjs": "^28.0.0",
     "@rollup/plugin-node-resolve": "^13.0.4",
-    "@schematics/angular": "19.0.0-rc.1",
+    "@schematics/angular": "19.1.0-next.0",
     "@stackblitz/sdk": "^1.11.0",
     "@types/angular": "^1.6.47",
     "@types/babel__core": "7.20.5",
     "@types/babel__generator": "7.6.8",
     "@types/bluebird": "^3.5.27",
-    "@types/chrome": "^0.0.280",
+    "@types/chrome": "^0.0.287",
     "@types/convert-source-map": "^2.0.0",
-    "@types/diff": "^5.0.0",
+    "@types/diff": "^6.0.0",
     "@types/dom-view-transitions": "^1.0.1",
     "@types/hammerjs": "2.0.46",
     "@types/jasmine": "^5.0.0",
@@ -114,7 +114,7 @@
     "domino": "https://github.com/angular/domino.git#8f228f8862540c6ccd14f76b5a1d9bb5458618af",
     "hammerjs": "~2.0.8",
     "http-server": "^14.0.0",
-    "jasmine": "~5.4.0",
+    "jasmine": "~5.5.0",
     "jasmine-ajax": "^4.0.0",
     "jasmine-core": "^5.0.0",
     "karma": "~6.4.0",
@@ -126,7 +126,7 @@
     "magic-string": "^0.30.8",
     "memo-decorator": "^2.0.1",
     "ngx-flamegraph": "0.0.12",
-    "ngx-progressbar": "^12.0.0",
+    "ngx-progressbar": "^13.0.0",
     "open-in-idx": "^0.1.1",
     "protractor": "^7.0.0",
     "reflect-metadata": "^0.2.0",
@@ -136,7 +136,7 @@
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rxjs": "^7.0.0",
     "selenium-webdriver": "3.5.0",
-    "selenium-webdriver4": "npm:selenium-webdriver@4.26.0",
+    "selenium-webdriver4": "npm:selenium-webdriver@4.27.0",
     "semver-dsl": "^1.0.1",
     "shelljs": "^0.8.5",
     "source-map": "0.7.4",
@@ -148,7 +148,7 @@
     "tslib": "^2.3.0",
     "tslint": "6.1.3",
     "tsx": "^4.7.2",
-    "typescript": "5.6.2",
+    "typescript": "5.6.3",
     "webtreemap": "^2.0.1",
     "ws": "^8.15.0",
     "xhr2": "0.2.1",
@@ -158,15 +158,14 @@
   "devDependencies": {
     "@actions/core": "^1.10.0",
     "@actions/github": "^6.0.0",
-    "@angular-devkit/architect-cli": "0.1900.0-rc.1",
-    "@angular/animations": "^19.0.0-next",
-    "@angular/build-tooling": "https://github.com/angular/dev-infra-private-build-tooling-builds.git#970e76aaf09a4f461a022f9cb286222a02d8e108",
-    "@angular/core": "^19.0.0-next",
-    "@angular/ng-dev": "https://github.com/angular/dev-infra-private-ng-dev-builds.git#34d876c80bc11f99686ecce281b304953b452785",
-    "@babel/plugin-proposal-async-generator-functions": "^7.20.7",
+    "@angular-devkit/architect-cli": "0.1901.0-next.0",
+    "@angular/animations": "^19.1.0-next",
+    "@angular/build-tooling": "https://github.com/angular/dev-infra-private-build-tooling-builds.git#29bf247ccf86684a4279df8181235345d4830d01",
+    "@angular/core": "^19.1.0-next",
+    "@angular/ng-dev": "https://github.com/angular/dev-infra-private-ng-dev-builds.git#abf82c69f968d1e1b94a84390ff3799a99a5afc4",
     "@bazel/bazelisk": "^1.7.5",
-    "@bazel/buildifier": "^6.0.0",
-    "@bazel/ibazel": "^0.16.0",
+    "@bazel/buildifier": "^7.0.0",
+    "@bazel/ibazel": "^0.25.0",
     "@codemirror/autocomplete": "^6.11.1",
     "@codemirror/commands": "^6.3.2",
     "@codemirror/lang-angular": "^0.1.2",
@@ -206,7 +205,7 @@
     "gulp": "^5.0.0",
     "gulp-conventional-changelog": "^5.0.0",
     "html-entities": "^2.5.2",
-    "husky": "9.1.6",
+    "husky": "9.1.7",
     "jsdom": "^25.0.0",
     "karma-coverage": "^2.2.1",
     "karma-jasmine-html-reporter": "^2.1.0",
@@ -235,7 +234,7 @@
   "// 3": "Ensure that transitive dependencies on `https-proxy-agent` are at minimum v5 as older versions patch NodeJS directly, breaking tools like webdriver which is used by the karma-sauce-launcher as an example.",
   "// 4": "Ensure that a single instance of the `saucelabs` package is used. Protractor and the Karma sauce launcher pull this package as dependency. A single instance allows for e.g. easier patching in the Karma config.",
   "resolutions": {
-    "**/https-proxy-agent": "7.0.5",
+    "**/https-proxy-agent": "7.0.6",
     "**/saucelabs": "8.0.0"
   }
 }
